Aggiunto sfondo terra.jpg

--- a/public/index.html
+++ b/public/index.html
@@ -22,6 +22,7 @@
         </section>
 
     <section id="parallax">
+        <div class="parallax-bg"></div>
         <div class="content-box">
     <h2 class="glitch-text">
         EVERYTHING
