--- a/public/index.html
+++ b/public/index.html
@@ -34,19 +34,45 @@
 
     <section id="identity-section">
         <div class="sticky-container">
-            <div class="identity-card active" id="id-1">
-                <div class="photo-frame" style="background-image: url('images/teo-zen.jpg');"></div> <h1>TEO ZEN</h1>
-            </div>
-            <div class="identity-card" id="id-2">
-                <div class="photo-frame" style="background-image: url('images/matcore.jpg');"></div>
-                <h1>MATCORE</h1>
-            </div>
-            <div class="identity-card" id="id-3">
-                <div class="photo-frame" style="background-image: url('images/matteo.jpg');"></div>
-                <h1>MATTEO CORTI</h1>
-                <p class="bio">Sono l'unione di caos e ordine. Esploro la tecnologia per raccontare l'umanità.</p>
+    
+    <div class="identity-card active" id="id-1">
+        <div class="card-content">
+            <img src="images/id-1-teozen.jpg" alt="Teo Zen Art" class="id-photo">
+            <div class="text-content">
+                <h1>TEO ZEN</h1>
+                <p class="bio">TEO ZEN è il mio nome d’arte: creatore di arte digitale, disegni e pittura old school, ma anche esploratore instancabile di nuovi territori creativi.
+Passo con naturalezza dalla programmazione di app e siti web, alla musica digitale AI, fino all’invenzione di dispositivi e gadget.
+Creo video sperimentali, provo tecnologie appena nate e mi butto in ogni nuova sfida con curiosità.</p>
             </div>
         </div>
+    </div>
+
+    <div class="identity-card" id="id-2">
+        <div class="card-content">
+            <img src="images/id-2-matcore.jpg" alt="Matcore Digital" class="id-photo">
+            <div class="text-content">
+                <h1>MATCORE</h1>
+                <p class="bio">MATCORE è il mio nickname storico, nato nei primi anni 2000 e cresciuto nei giochi online FPS.
+Breve, diretto, funzionale: un nome che mi ha accompagnato nella scalata alle classifiche, nelle notti infinite davanti allo schermo e nella costruzione della mia identità digitale più competitiva.
+Ancora oggi è un riferimento nel mio ambiente virtuale, sinonimo di esperienza, skill e mentalità old school.</p>
+            </div>
+        </div>
+    </div>
+
+    <div class="identity-card" id="id-3">
+        <div class="card-content">
+            <img src="images/id-3-matteo.jpg" alt="Matteo Corti Real" class="id-photo">
+            <div class="text-content">
+                <h1>MATTEO CORTI</h1>
+                <p class="bio">MATTEO CORTI è la mia identità reale. Classe 1988.
+Sono un esploratore solitario, inventore e sognatore, uso filosofia e pensiero critico per analizzare la società contemporanea, pormi domande scomode e cercare risposte autentiche.
+Scrivo per hobby, viaggio da solo per conoscere nuove culture, cucino e reinvento ricette, vivo il minimalismo, l’ecologia e una visione anti-consumista e anti-capitalista.
+Mi interessa capire come vivere meglio, con poco.</p>
+            </div>
+        </div>
+    </div>
+
+</div>
     </section>
 
     <section id="work">
