Modifiche alla sezione work

--- a/public/index.html
+++ b/public/index.html
@@ -76,13 +76,60 @@ Mi interessa capire come vivere meglio, con poco.</p>
     </section>
 
     <section id="work">
-        <h2>MY WORK</h2>
-        <div class="gallery">
-            <div class="work-item">Progetto 1</div>
-            <div class="work-item">Progetto 2</div>
-            <div class="work-item">Progetto 3</div>
-        </div>
-    </section>
+    <h2>MY WORK</h2>
+    
+    <div class="work-container">
+
+        <a href="coding.html" class="poster-wrapper">
+            <div class="poster-image">
+                <img src="images/work-coding.jpg" alt="Coding Project">
+            </div>
+            <div class="poster-header">
+                <div class="titles-slide">
+                    <h3>CODING</h3>
+                    <h3>SEE PROJECT</h3>
+                </div>
+            </div>
+        </a>
+
+        <a href="art.html" class="poster-wrapper">
+            <div class="poster-image">
+                <img src="images/work-art.jpg" alt="Art Project">
+            </div>
+            <div class="poster-header">
+                <div class="titles-slide">
+                    <h3>ART</h3>
+                    <h3>SEE CREATIONS</h3>
+                </div>
+            </div>
+        </a>
+
+        <a href="diy.html" class="poster-wrapper">
+            <div class="poster-image">
+                <img src="images/work-diy.jpg" alt="DIY Project">
+            </div>
+            <div class="poster-header">
+                <div class="titles-slide">
+                    <h3>DIY</h3>
+                    <h3>SEE CREATIONS</h3>
+                </div>
+            </div>
+        </a>
+
+        <a href="food.html" class="poster-wrapper">
+            <div class="poster-image">
+                <img src="images/work-food.jpg" alt="Food Project">
+            </div>
+            <div class="poster-header">
+                <div class="titles-slide">
+                    <h3>FOOD</h3>
+                    <h3>SEE DISHES</h3>
+                </div>
+            </div>
+        </a>
+
+    </div>
+</section>
 
     <footer>
         Teo Zen Website by Teo Zen
