--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
             <li><a href="#hero">HOME</a></li>
             <li><a href="#identity-section">ABOUT ME</a></li>
             <li><a href="#work">WORK</a></li>
-            <li><a href="#contact">CONTACT</a></li>
+            <li><a href="#contact">SOCIAL</a></li>
         </ul>
     </nav>
 
