--- a/public/food.html
+++ b/public/food.html
@@ -53,6 +53,16 @@
             color: #888;
             margin-bottom: 60px;
         }
+        .page-desc {
+    text-align:justify;
+    font-family: var(--font-body);
+    font-size: 1.1rem;
+    color: #aaa; /* Grigio elegante */
+    max-width: 600px;
+    margin: 0 auto 50px auto; /* Centrato con spazio sotto */
+    line-height: 1.6;
+    font-style: italic;
+}
 
         /* Navigazione */
         nav { background: rgba(18, 18, 18, 0.95); border-bottom: 1px solid #333; }
@@ -133,6 +143,13 @@
 
     <div style="margin-top: 120px;">
         <h1>Culinary Art</h1>
+        <p class="page-desc">
+    Sono sempre alla ricerca di nuove sfide, e la cucina è diventata la mia forma di realizzazione più concreta. È il punto d’incontro perfetto tra necessità e piacere: mangiare, sì, ma mangiare bene.
+
+Creo piatti partendo da ricette esistenti, le smonto, le modifico e le riassemblo senza troppi sensi di colpa. Per me cucinare è osare e sperimentare continuamente: spezie, accostamenti insoliti e combinazioni apparentemente azzardate che, spesso, sorprendono anche me.
+
+Non inseguo il gourmet né la perfezione estetica. Niente decorazioni da copertina: la mia cucina è pratica, sincera e abbondante. Porzioni generose, sapori decisi e un solo obiettivo finale: sedersi a tavola e godere.
+</p>
         <p class="subtitle">Taste • Science • Tradition</p>
     </div>
 
@@ -153,7 +170,7 @@
                     <div class="food-info">
                         <h3>${dish.title}</h3>
                         <p>${dish.description}</p>
-                        ${dish.tags.map(tag => `<span class="tag">${tag}</span>`).join('')}
+            
                     </div>
                 </div>
             `;
