ripristinato icene social

--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html lang="it">
 <head>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+
+    <link rel="stylesheet" href="style.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
     
@@ -163,7 +166,7 @@ Mi interessa capire come vivere meglio, con poco.</p>
         </li>
 
         <li>
-            <a href="mailto:matcor3@gmail.com">
+            <a href="mailto:matcor3@libero.it">
                 <i class="fas fa-envelope icon"></i>
             </a>
         </li>
