--- a/public/index.html
+++ b/public/index.html
@@ -23,8 +23,7 @@
     <meta name="twitter:description" content="Portfolio interattivo di Matteo Corti. Coding, Art, Food, DIY.">
     <meta name="twitter:image" content="https://tuo-username.github.io/teo-zen-universe/images/og-image.jpg">
 
-    <link href="https://fonts.googleapis.com/..." rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
+   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400&family=Orbitron:wght@500;900&display=swap" rel="stylesheet">
     <script type="application/ld+json">
 {
   "@context": "https://schema.org",
