--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
 
    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400&family=Orbitron:wght@500;900&display=swap" rel="stylesheet">
     <script type="application/ld+json">
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png"> 
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
 {
   "@context": "https://schema.org",
   "@type": "Person",
