modifica parte SEO

--- a/index.html
+++ b/index.html
@@ -13,15 +13,15 @@
     <meta name="author" content="Matteo Corti">
 
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://tuo-username.github.io/teo-zen-universe/">
+    <meta property="og:url" content="https://matcor3.github.io/teozen/">
     <meta property="og:title" content="Teo Zen Universe | Coding & Art">
     <meta property="og:description" content="Entra nel multiverso di Matteo Corti. Un'esperienza digitale tra codice, arte e scienza.">
-    <meta property="og:image" content="https://tuo-username.github.io/teo-zen-universe/images/og-image.jpg">
+    <meta property="og:image" content="https://matcor3.github.io/teozen/images/og-image.jpg">
 
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Teo Zen Universe">
     <meta name="twitter:description" content="Portfolio interattivo di Matteo Corti. Coding, Art, Food, DIY.">
-    <meta name="twitter:image" content="https://tuo-username.github.io/teo-zen-universe/images/og-image.jpg">
+    <meta name="twitter:image" content="https://matcor3.github.io/teozen/images/og-image.jpg">
 
    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400&family=Orbitron:wght@500;900&display=swap" rel="stylesheet">
     <script type="application/ld+json">
@@ -33,8 +33,8 @@
   "@type": "Person",
   "name": "Matteo Corti",
   "alternateName": ["Teo Zen", "Matcore"],
-  "url": "https://tuo-username.github.io/teo-zen-universe/",
-  "image": "https://tuo-username.github.io/teo-zen-universe/images/id-1-teozen.jpg",
+  "url": "https://matcor3.github.io/teozen/",
+  "image": "https://matcor3.github.io/teozen/images/id-1-teozen.jpg",
   "jobTitle": ["Web Developer", "Digital Artist", "Inventor"],
   "description": "Creatore digitale poliedrico che spazia dalla programmazione all'arte digitale, dalla cucina scientifica al fai-da-te.",
   "sameAs": [
