modifiche index head

--- a/index.html
+++ b/index.html
@@ -1,50 +1,46 @@
 <!DOCTYPE html>
 <html lang="it">
 <head>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-
-    <link rel="stylesheet" href="style.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
     
     <title>Teo Zen | Digital Artist, Developer & Creator (Matteo Corti)</title>
-    <meta name="description" content="Il portfolio sperimentale di Matteo Corti (aka Teo Zen / Matcore). Esplora un universo di Coding, Digital Art, Food Science e Invenzioni DIY.">
-    <meta name="keywords" content="Teo Zen, Matteo Corti, Matcore, Web Developer, Digital Artist, Creative Coding, Food Lab, DIY, Portfolio Sperimentale">
-    <meta name="author" content="Matteo Corti">
+    
+    <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png"> 
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
 
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400&family=Orbitron:wght@500;900&display=swap" rel="stylesheet">
+
+    <meta name="description" content="Il portfolio sperimentale di Matteo Corti (aka Teo Zen / Matcore).">
+    <meta name="author" content="Matteo Corti">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://matcor3.github.io/teozen/">
     <meta property="og:title" content="Teo Zen Universe | Coding & Art">
-    <meta property="og:description" content="Entra nel multiverso di Matteo Corti. Un'esperienza digitale tra codice, arte e scienza.">
     <meta property="og:image" content="https://matcor3.github.io/teozen/images/og-image.jpg">
-
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="Teo Zen Universe">
-    <meta name="twitter:description" content="Portfolio interattivo di Matteo Corti. Coding, Art, Food, DIY.">
-    <meta name="twitter:image" content="https://matcor3.github.io/teozen/images/og-image.jpg">
 
-   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400&family=Orbitron:wght@500;900&display=swap" rel="stylesheet">
     <script type="application/ld+json">
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png"> 
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-{
-  "@context": "https://schema.org",
-  "@type": "Person",
-  "name": "Matteo Corti",
-  "alternateName": ["Teo Zen", "Matcore"],
-  "url": "https://matcor3.github.io/teozen/",
-  "image": "https://matcor3.github.io/teozen/images/id-1-teozen.jpg",
-  "jobTitle": ["Web Developer", "Digital Artist", "Inventor"],
-  "description": "Creatore digitale poliedrico che spazia dalla programmazione all'arte digitale, dalla cucina scientifica al fai-da-te.",
-  "sameAs": [
-    "https://www.instagram.com/teozen.xyz/",
-    "https://www.facebook.com/matcore.artist/",
-    "https://www.youtube.com/channel/UC1lNtq8ugRMK2JpZyyKjRMg"
-  ],
-  "knowsAbout": ["Web Development", "JavaScript", "Digital Art", "Food Science", "DIY Electronics"]
-}
-</script>
+    {
+      "@context": "https://schema.org",
+      "@type": "Person",
+      "name": "Matteo Corti",
+      "alternateName": ["Teo Zen", "Matcore"],
+      "url": "https://matcor3.github.io/teozen/",
+      "image": "https://matcor3.github.io/teozen/images/id-1-teozen.jpg",
+      "jobTitle": ["Web Developer", "Digital Artist", "Inventor"],
+      "description": "Creatore digitale poliedrico che spazia dalla programmazione all'arte digitale, dalla cucina scientifica al fai-da-te.",
+      "sameAs": [
+        "https://www.instagram.com/teozen.xyz/",
+        "https://www.facebook.com/matcore.artist/",
+        "https://www.youtube.com/channel/UC1lNtq8ugRMK2JpZyyKjRMg",
+        "https://suno.com/@matcore"
+      ],
+      "knowsAbout": ["Web Development", "JavaScript", "Digital Art", "Food Science", "DIY Electronics"]
+    }
+    </script>
 </head>
 <body>
 
