aggiunta verifica google

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
-    
+    <meta name="google-site-verification" content="4Isc7sfHyokHzbQg7vcAe5-tm5iuZMfj4rCLxE-REdw" />
     <title>Teo Zen | Digital Artist, Developer & Creator (Matteo Corti)</title>
     
     <link rel="apple-touch-icon" sizes="180x180" href="images/apple-touch-icon.png"> 
